bk_ida/gccida/c3/insn_extract
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:523:4: error: expected ';' after expression
rtx v47; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:523:5: error: use of undeclared identifier 'v47'
rtx v47; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:524:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:524:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:525:4: error: expected ';' after expression
rtx v49; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:525:5: error: use of undeclared identifier 'v49'
rtx v49; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:526:4: error: expected ';' after expression
rtx v50; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:526:5: error: use of undeclared identifier 'v50'
rtx v50; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:529:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:529:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:530:4: error: expected ';' after expression
rtx v54; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:530:5: error: use of undeclared identifier 'v54'
rtx v54; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:531:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:531:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:533:6: error: use of undeclared identifier 'v57'
rtx *v57; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:535:4: error: expected ';' after expression
rtx v59; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:535:5: error: use of undeclared identifier 'v59'
rtx v59; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:536:4: error: expected ';' after expression
rtx v60; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/insn-extract.c:536:5: error: use of undeclared identifier 'v60'
rtx v60; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insn_extract/src/obj/insn-extract.o] Error 1
